--- a/ThesisCh/ntuvars.tex
+++ b/ThesisCh/ntuvars.tex
@@ -11,13 +11,13 @@
 \universityCH{國立臺灣大學}
 \collageCH{工學院}
 \instituteCH{機械工程學系}
-\degreeCH{博士}
-\thesisCH{博士論文}
+\degreeCH{碩士}
+\thesisCH{碩士論文}
 \instituteEN{Department of Mechanical Engineering}
 \collageEN{College of Engineering}
 \universityEN{National Taiwan University}
 %\degreeEN{O-O}
-\thesisEN{Doctoral Dissertation}
+\thesisEN{Master Thesis}
 \advisortitleCH{指導教授：}
 \advisortitleEN{Advisor:}
 \datetitleCH{中華民國}
@@ -33,9 +33,9 @@
 % {{{
 \titleCH{中文標題，請到\href{run:./ntuvars.tex}{ntuvars.tex}輸入你的資料}
 \titleEN{English title}
-\authorCH{洪子頡}
-\studentID{D02522031}
-\authorEN{Tzu-Chieh Hung}
+\authorCH{李亭宜}
+\studentID{R09522620}
+\authorEN{Ting-I Lee}
 \advisorCH{詹魁元 博士}
 \advisorEN{Kuei-Yuan Chan, Ph.D.}
 \yearCH{105}
