Organize Folder + set Bib

--- a/ThesisCh/PackageSetting.tex
+++ b/ThesisCh/PackageSetting.tex
@@ -4,7 +4,7 @@
 \usepackage[hyphens]{url}
 %Verbatim with URL-sensitive line breaks.
 \usepackage[colorlinks=true,linkcolor=black,citecolor=black,filecolor=blue,urlcolor=blue,unicode]{hyperref}
-%The hyperref package is used to handle cross-referencing commands in LaTeX to produce hypertext links in the document. The package provides backends for the \special set defined for HyperTeX DVI processors; for embedded pdfmark commands for processing by Acrobat Distiller (dvips and Y&Y¡¦s dvipsone); for Y&Y¡¦s dviwindo; for PDF control within pdfTeX and dvipdfm; for TeX4ht; and for VTeX¡¦s pdf and HTML backends.
+%The hyperref package is used to handle cross-referencing commands in LaTeX to produce hypertext links in the document. The package provides backends for the \special set defined for HyperTeX DVI processors; for embedded pdfmark commands for processing by Acrobat Distiller (dvips and Y&Yï¿½ï¿½s dvipsone); for Y&Yï¿½ï¿½s dviwindo; for PDF control within pdfTeX and dvipdfm; for TeX4ht; and for VTeXï¿½ï¿½s pdf and HTML backends.
 
 \usepackage{verbatim}
 %The verbatim environment  simply reproduces every character you input, including all  s p a c e s!
@@ -26,7 +26,7 @@
 \usepackage{enumitem}
 %Control layout of itemize, enumerate, description.  It supersedes both enumerate and mdwlist (providing well- structured replacements for all their funtionality), and in addition provides functions to compute the layout of labels, and to 'clone' the standard environments, to create new environments with counters of their own.
 \usepackage{mfirstuc}
-%\makefirstuc{¡qstuff ¡r} This makes the first object of ¡qstuff ¡r uppercase unless ¡qstuff ¡r starts with a con- trol sequence followed by a non-empty group, in which case the first object in the group is converted to uppercase.
+%\makefirstuc{ï¿½qstuff ï¿½r} This makes the first object of ï¿½qstuff ï¿½r uppercase unless ï¿½qstuff ï¿½r starts with a con- trol sequence followed by a non-empty group, in which case the first object in the group is converted to uppercase.
 \usepackage{fancyvrb}
 %This package provides very sophisticated facilities for reading and writing ver- batim TEX code.
 \usepackage{amsfonts}
@@ -74,7 +74,7 @@
 \renewcommand{\=}[1]{\stackrel{#1}{=}} % for putting numbers above =
 %end Declare
 
-\usepackage{booktabs}				% ªí®æ½u±ø
+\usepackage{booktabs}				% ï¿½ï¿½ï¿½ï¿½uï¿½ï¿½
 \usepackage{tabularx}
 %tabularx, is defined, which takes the same arguments as tabular*, but modifies the widths of certain columns, rather than the inter column space, to set a table with the requested total width. The columns that may stretch are marked with the new token X in the preamble argument. This package requires the array package. The package is part of the tools bundle in the LaTeX required distribution.
 %\usepackage{lmodern}
