--- a/ThesisCh/ntuvars.tex
+++ b/ThesisCh/ntuvars.tex
@@ -31,16 +31,16 @@
 % }}}
 
 % {{{
-\titleCH{中文標題，請到\href{run:./ntuvars.tex}{ntuvars.tex}輸入你的資料}
+\titleCH{中文標題}
 \titleEN{English title}
 \authorCH{李亭宜}
 \studentID{R09522620}
 \authorEN{Ting-I Lee}
 \advisorCH{詹魁元 博士}
 \advisorEN{Kuei-Yuan Chan, Ph.D.}
-\yearCH{105}
-\yearEN{2016}
-\monthCH{1}
-\monthEN{January}
+\yearCH{111}
+\yearEN{2022}
+\monthCH{7}
+\monthEN{July}
 \dateCH{15}
 % }}}
