--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -31,10 +31,10 @@
 
 %\includepdf[pages={1}]{Verification_Letter.pdf}
 \onehalfspacing
-\input{acknowledgementsCH} %致謝
-\input{abstractCH}
+\input{FrontFile/acknowledgementsCH} %致謝
+\input{FrontFile/abstractCH}
 \doublespacing
-\input{abstractEN}
+\input{FrontFile/abstractEN}
 
 %\doublespacing
 \onehalfspacing
@@ -93,7 +93,7 @@
 %---------- Input your reference here ---------
 \bibliographystyle{ieeetr}
 \addcontentsline{toc}{chapter}{\bibname}
-\bibliography{thesisbib}
+\bibliography{Bib/thesisbib}
 
 %----------- Input your Figure chapter here  -----------
 %\input{EndFigTab} 
