--- a/ThesisCh/Bib/thesisbib.bib
+++ b/ThesisCh/Bib/thesisbib.bib
@@ -1,57 +1,57 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-
-%% Created for 阿茲 at 2012-09-14 15:05:12 +0800 
+%% Created for Tiffany at 2022-02-23 13:01:32 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{von1938elektronen,
-	Author = {Von Ardenne, M.},
-	Date-Added = {2012-09-14 15:04:29 +0800},
-	Date-Modified = {2012-09-14 15:04:29 +0800},
-	Journal = {Zeitschrift f{\"u}r Physik A Hadrons and Nuclei},
-	Number = {9},
-	Pages = {553--572},
-	Publisher = {Springer},
-	Title = {Das Elektronen-Rastermikroskop},
-	Volume = {109},
-	Year = {1938}}
+@inproceedings{7039067,
+	author = {Mainetti, Luca and Patrono, Luigi and Sergi, Ilaria},
+	booktitle = {2014 22nd International Conference on Software, Telecommunications and Computer Networks (SoftCOM)},
+	date-added = {2022-02-23 13:00:06 +0800},
+	date-modified = {2022-02-23 13:00:06 +0800},
+	doi = {10.1109/SOFTCOM.2014.7039067},
+	pages = {111-120},
+	title = {A survey on indoor positioning systems},
+	year = {2014},
+	bdsk-url-1 = {https://doi.org/10.1109/SOFTCOM.2014.7039067}}
 
-@misc{bennig1988atomic,
-	Author = {Bennig, G.K.},
-	Date-Added = {2012-09-14 15:02:51 +0800},
-	Date-Modified = {2012-09-14 15:02:51 +0800},
-	Month = feb # {~9},
-	Note = {US Patent 4,724,318},
-	Publisher = {Google Patents},
-	Title = {Atomic force microscope and method for imaging surfaces with atomic resolution},
-	Year = {1988}}
+@article{von1938elektronen,
+	author = {Von Ardenne, M.},
+	date-added = {2012-09-14 15:04:29 +0800},
+	date-modified = {2012-09-14 15:04:29 +0800},
+	journal = {Zeitschrift f{\"u}r Physik A Hadrons and Nuclei},
+	number = {9},
+	pages = {553--572},
+	publisher = {Springer},
+	title = {Das Elektronen-Rastermikroskop},
+	volume = {109},
+	year = {1938}}
 
 @book{raether1988surface,
-	Author = {Raether, H.},
-	Date-Added = {2012-09-14 15:02:26 +0800},
-	Date-Modified = {2012-09-14 15:02:26 +0800},
-	Publisher = {Springer-Verlag Berlin},
-	Title = {Surface plasmons},
-	Year = {1988}}
+	author = {Raether, H.},
+	date-added = {2012-09-14 15:02:26 +0800},
+	date-modified = {2012-09-14 15:02:26 +0800},
+	publisher = {Springer-Verlag Berlin},
+	title = {Surface plasmons},
+	year = {1988}}
 
 @book{kittel1976introduction,
-	Author = {Kittel, C. and McEuen, P.},
-	Date-Added = {2012-09-14 15:01:59 +0800},
-	Date-Modified = {2012-09-14 15:01:59 +0800},
-	Publisher = {Wiley New York},
-	Title = {Introduction to solid state physics},
-	Volume = {7},
-	Year = {1976}}
+	author = {Kittel, C. and McEuen, P.},
+	date-added = {2012-09-14 15:01:59 +0800},
+	date-modified = {2012-09-14 15:01:59 +0800},
+	publisher = {Wiley New York},
+	title = {Introduction to solid state physics},
+	volume = {7},
+	year = {1976}}
 
 @book{maier2007plasmonics,
-	Author = {Maier, S.A.},
-	Date-Added = {2012-09-14 15:01:45 +0800},
-	Date-Modified = {2012-09-14 15:01:45 +0800},
-	Publisher = {Springer Verlag},
-	Title = {Plasmonics: fundamentals and applications},
-	Year = {2007}}
+	author = {Maier, S.A.},
+	date-added = {2012-09-14 15:01:45 +0800},
+	date-modified = {2012-09-14 15:01:45 +0800},
+	publisher = {Springer Verlag},
+	title = {Plasmonics: fundamentals and applications},
+	year = {2007}}
