--- a/ThesisCh/Bib/thesisbib.bib
+++ b/ThesisCh/Bib/thesisbib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-02-23 13:01:32 +0800 
+%% Created for Tiffany at 2022-03-30 23:43:47 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{radiometry_and_photometry,
+	author = {Mccluney, William},
+	date = {2015/11/01},
+	date-added = {2022-03-30 23:41:49 +0800},
+	date-modified = {2022-03-30 23:43:11 +0800},
+	month = {11},
+	title = {Introduction to Radiometry and Photometry 2nd ed: Title Page \& Table of Contents},
+	year = {2015}}
 
 @inproceedings{7039067,
 	author = {Mainetti, Luca and Patrono, Luigi and Sergi, Ilaria},
@@ -18,40 +27,3 @@
 	title = {A survey on indoor positioning systems},
 	year = {2014},
 	bdsk-url-1 = {https://doi.org/10.1109/SOFTCOM.2014.7039067}}
-
-@article{von1938elektronen,
-	author = {Von Ardenne, M.},
-	date-added = {2012-09-14 15:04:29 +0800},
-	date-modified = {2012-09-14 15:04:29 +0800},
-	journal = {Zeitschrift f{\"u}r Physik A Hadrons and Nuclei},
-	number = {9},
-	pages = {553--572},
-	publisher = {Springer},
-	title = {Das Elektronen-Rastermikroskop},
-	volume = {109},
-	year = {1938}}
-
-@book{raether1988surface,
-	author = {Raether, H.},
-	date-added = {2012-09-14 15:02:26 +0800},
-	date-modified = {2012-09-14 15:02:26 +0800},
-	publisher = {Springer-Verlag Berlin},
-	title = {Surface plasmons},
-	year = {1988}}
-
-@book{kittel1976introduction,
-	author = {Kittel, C. and McEuen, P.},
-	date-added = {2012-09-14 15:01:59 +0800},
-	date-modified = {2012-09-14 15:01:59 +0800},
-	publisher = {Wiley New York},
-	title = {Introduction to solid state physics},
-	volume = {7},
-	year = {1976}}
-
-@book{maier2007plasmonics,
-	author = {Maier, S.A.},
-	date-added = {2012-09-14 15:01:45 +0800},
-	date-modified = {2012-09-14 15:01:45 +0800},
-	publisher = {Springer Verlag},
-	title = {Plasmonics: fundamentals and applications},
-	year = {2007}}
