--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-03-30 23:43:47 +0800 
+%% Created for Tiffany at 2022-04-10 22:02:30 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -17,11 +17,11 @@
 	title = {Introduction to Radiometry and Photometry 2nd ed: Title Page \& Table of Contents},
 	year = {2015}}
 
-@inproceedings{7039067,
+@inproceedings{survey_indoorpos,
 	author = {Mainetti, Luca and Patrono, Luigi and Sergi, Ilaria},
 	booktitle = {2014 22nd International Conference on Software, Telecommunications and Computer Networks (SoftCOM)},
 	date-added = {2022-02-23 13:00:06 +0800},
-	date-modified = {2022-02-23 13:00:06 +0800},
+	date-modified = {2022-04-10 15:34:19 +0800},
 	doi = {10.1109/SOFTCOM.2014.7039067},
 	pages = {111-120},
 	title = {A survey on indoor positioning systems},
