--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -18,7 +18,7 @@
 \setlength{\wpYoffset}{10.5225cm}
 
 %----------- cover page -----------
-\maketitle
+% \maketitle
 
 %----------- side page, used for printing on spline -----------
 % \makeside
@@ -85,7 +85,7 @@
 	[\vspace{2ex}%
 	 \titlerule]
 
-\input{AppendixA} 
+% \input{AppendixA} 
 
 
 
