--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,48 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-04-10 22:02:30 +0800 
+%% Created for Tiffany at 2022-04-11 06:37:33 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{survey_light2018,
+	author = {Zhuang, Yuan and Hua, Luchi and Qi, Longning and Yang, Jun and Cao, Pan and Cao, Yue and Wu, Yongpeng and Thompson, John and Haas, Harald},
+	date-added = {2022-04-11 06:37:23 +0800},
+	date-modified = {2022-04-11 06:37:32 +0800},
+	doi = {10.1109/COMST.2018.2806558},
+	journal = {IEEE Communications Surveys Tutorials},
+	number = {3},
+	pages = {1963-1988},
+	title = {A Survey of Positioning Systems Using Visible LED Lights},
+	volume = {20},
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.1109/COMST.2018.2806558}}
+
+@article{survey_light2020,
+	author = {Maheepala, Malith and Kouzani, Abbas Z. and Joordens, Matthew A.},
+	date-added = {2022-04-11 06:36:38 +0800},
+	date-modified = {2022-04-11 06:36:48 +0800},
+	doi = {10.1109/JSEN.2020.2964380},
+	journal = {IEEE Sensors Journal},
+	number = {8},
+	pages = {3971-3995},
+	title = {Light-Based Indoor Positioning Systems: A Review},
+	volume = {20},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.1109/JSEN.2020.2964380}}
+
+@article{survey_indoor2018,
+	author = {Faheem Zafari and Athanasios Gkelias and Kin Kwong Leung},
+	date-added = {2022-04-11 06:34:14 +0800},
+	date-modified = {2022-04-11 06:34:28 +0800},
+	journal = {IEEE Communications Surveys \& Tutorials},
+	pages = {2568-2599},
+	title = {A Survey of Indoor Localization Systems and Technologies},
+	volume = {21},
+	year = {2019}}
 
 @book{radiometry_and_photometry,
 	author = {Mccluney, William},
@@ -17,11 +53,11 @@
 	title = {Introduction to Radiometry and Photometry 2nd ed: Title Page \& Table of Contents},
 	year = {2015}}
 
-@inproceedings{survey_indoorpos,
+@inproceedings{survey_indoor2014,
 	author = {Mainetti, Luca and Patrono, Luigi and Sergi, Ilaria},
 	booktitle = {2014 22nd International Conference on Software, Telecommunications and Computer Networks (SoftCOM)},
 	date-added = {2022-02-23 13:00:06 +0800},
-	date-modified = {2022-04-10 15:34:19 +0800},
+	date-modified = {2022-04-11 06:34:36 +0800},
 	doi = {10.1109/SOFTCOM.2014.7039067},
 	pages = {111-120},
 	title = {A survey on indoor positioning systems},
