34章老師要的圖補

--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -54,10 +54,8 @@
 %normal cite == \input
 \input{chapter/01Introduction.tex}
 \input{chapter/02LiteratureReview.tex}
-%\input{start}
-%\input{THM}
-%\input{EXP}
-%\input{main}
+\input{chapter/03Method.tex}
+\input{chapter/04Optimize.tex}
 %\input{conclusions}
 
 %chapter cite  == \include
