--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-04-11 17:14:45 +0800 
+%% Created for Tiffany at 2022-04-15 16:11:23 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{rf_law,
+	date-added = {2022-04-15 16:08:03 +0800},
+	date-modified = {2022-04-15 16:11:16 +0800},
+	month = {10},
+	organization = {國家通訊傳播委員會},
+	title = {業餘無線電技術規範},
+	year = {2015}}
 
 @incollection{si_pd,
 	address = {Rijeka},
