--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -56,7 +56,9 @@
 \input{chapter/02LiteratureReview.tex}
 \input{chapter/03Method.tex}
 \input{chapter/04Optimize.tex}
-%\input{conclusions}
+% \input{chapter/05Case.tex}
+% \input{chapter/06Conclusion.tex}
+
 
 %chapter cite  == \include
 %\include{start}
