--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,72 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-06-13 23:04:30 +0800 
+%% Created for Tiffany at 2022-07-10 16:12:54 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@misc{pic:aruco,
+  author = {OpenCV},
+  title = {Detection of ArUco Markers},
+  note = {Retrieved Jul 2022},
+  howpublished = {Retrieved Jul 2022 from: \url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}}
+}
 
+@article{pic:image_processing,
+	abstract = {Recently, the demand for location-based services using mobile devices in indoor spaces without a global positioning system (GPS) has increased. However, to the best of our knowledge, solutions that are fully applicable to indoor positioning and navigation and ensure real-time mobility on mobile devices, such as global navigation satellite system (GNSS) solutions, cannot achieve remarkable researches in indoor circumstances. Indoor single-shot image positioning using smartphone cameras does not require a dedicated infrastructure and offers the advantages of low price and large potential markets owing to the popularization of smartphones. However, existing methods or systems based on smartphone cameras and image algorithms encounter various limitations when implemented in indoor environments. To address this, we designed an indoor visual positioning system for mobile devices that can locate users in indoor scenes. The proposed method uses a smartphone camera to detect objects through a single image in a web environment and calculates the location of the smartphone to find users in an indoor space. The system is inexpensive because it integrates deep learning and computer vision algorithms and does not require additional infrastructure. We present a novel method of detecting 3D model objects from single-shot RGB data, estimating the 6D pose and position of the camera and correcting errors based on voxels. To this end, the popular convolutional neural network (CNN) is improved by real-time pose estimation to handle the entire 6D pose estimate the location and direction of the camera. The estimated position of the camera is addressed to a voxel to determine a stable user position. Our VPS system provides the user with indoor information in 3D AR model. The voxel address optimization approach with camera 6D position estimation using RGB images in a mobile web environment outperforms real-time performance and accuracy compared to current state-of-the-art methods using RGB depth or point cloud.},
+	article-number = {865},
+	author = {Kim, Ju-Young and Kim, In-Seon and Yun, Dai-Yeol and Jung, Tae-Won and Kwon, Soon-Chul and Jung, Kye-Dong},
+	date-added = {2022-07-09 08:08:02 +0800},
+	date-modified = {2022-07-09 08:08:10 +0800},
+	doi = {10.3390/electronics11060865},
+	issn = {2079-9292},
+	journal = {Electronics},
+	number = {6},
+	title = {Visual Positioning System Based on 6D Object Pose Estimation Using Mobile Web},
+	url = {https://www.mdpi.com/2079-9292/11/6/865},
+	volume = {11},
+	year = {2022},
+	bdsk-url-1 = {https://www.mdpi.com/2079-9292/11/6/865},
+	bdsk-url-2 = {https://doi.org/10.3390/electronics11060865}}
+
+@article{pic:fingerprinting,
+	author = {Tegou, Thomas and Kalamaras, Ilias and Tsipouras, Markos and Giannakeas, Nikolaos and Votis, Konstantinos and Tzovaras, Dimitrios},
+	date-added = {2022-07-09 07:53:59 +0800},
+	date-modified = {2022-07-09 07:54:10 +0800},
+	doi = {10.3390/s19030452},
+	journal = {Sensors},
+	month = {01},
+	pages = {452},
+	title = {A Low-Cost Indoor Activity Monitoring System for Detecting Frailty in Older Adults},
+	volume = {19},
+	year = {2019},
+	bdsk-url-1 = {https://doi.org/10.3390/s19030452}}
+
+@article{pic:triangulation,
+	author = {Hasan, Hameedah and Hussein, Mohamed and mad saad, Shaharil and Mat Dzahir, Mohd Azuwan},
+	date-added = {2022-07-09 07:34:13 +0800},
+	date-modified = {2022-07-09 07:34:33 +0800},
+	doi = {10.14419/ijet.v7i3.25.17459},
+	journal = {International Journal of Engineering and Technology(UAE)},
+	month = {08},
+	pages = {1-5},
+	title = {An Overview of Local Positioning System: Technologies, Techniques and Applications},
+	volume = {7},
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.14419/ijet.v7i3.25.17459}}
+
+@article{iot,
+	author = {Shafique, Kinza and Khawaja, Bilal A. and Sabir, Farah and Qazi, Sameer and Mustaqim, Muhammad},
+	date-added = {2022-07-08 00:55:35 +0800},
+	date-modified = {2022-07-08 00:55:40 +0800},
+	doi = {10.1109/ACCESS.2020.2970118},
+	journal = {IEEE Access},
+	pages = {23022-23040},
+	title = {Internet of Things (IoT) for Next-Generation Smart Systems: A Review of Current Challenges, Future Trends and Prospects for Emerging 5G-IoT Scenarios},
+	volume = {8},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.1109/ACCESS.2020.2970118}}
 
 @article{case:hypercube,
 	abstract = {An innovative insect-based visual sensor is designed to perform active marker tracking. Without any optics and a field-of-view of about 60$\,^{\circ}$, a novel miniature visual sensor is able to locate flickering markers (LEDs) with an accuracy much greater than the one dictated by the pixel pitch. With a size of only 1 cm3 and a mass of only 0.33 g, the lensless sensor, called HyperCube, is dedicated to 3D motion tracking and fits perfectly with the drastic constraints imposed by micro-aerial vehicles. Only three photosensors are placed on each side of the cubic configuration of the sensing device, making this sensor very inexpensive and light. HyperCube provides the azimuth and elevation of infrared LEDs flickering at a high frequency (&gt;1 kHz) with a precision of 0.5$\,^{\circ}$. The minimalistic design in terms of small size, low mass and low power consumption of this visual sensor makes it suitable for many applications in the field of the cooperative flight of unmanned aerial vehicles and, more generally, robotic applications requiring active beacons. Experimental results show that HyperCube provides useful angular measurements that can be used to estimate the relative position between the sensor and the flickering infrared markers.},
