--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -9,6 +9,9 @@
 
 \begin{document}
 
+\setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{3}
+
 %----------- hyphenation  -----------
 %\righthyphenmin=10  % Best hyphenation parameter
 
@@ -54,8 +57,8 @@
 %normal cite == \input
 \input{chapter/01Introduction.tex}
 \input{chapter/02LiteratureReview.tex}
-\input{chapter/03Method.tex}
-\input{chapter/04Optimize.tex}
+% \input{chapter/03Method.tex}
+% \input{chapter/04Optimize.tex}
 % \input{chapter/05Case.tex}
 % \input{chapter/06Conclusion.tex}
 
