--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,17 +1,82 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-07-10 16:12:54 +0800 
+%% Created for Tiffany at 2022-07-11 08:26:45 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
+@article{pic:lambertian_3d,
+	abstract = {Visible Light Communication (VLC) has gained popularity in research and business in the last decade. This technology aims to combine lighting and communication into a single device. For now, this technology has been thoroughly studied for an indoor environment, but it is sufficiently mature nowadays to consider its outdoor-environment potentials. The key outdoor challenges are the weather variabilities and smoke particles in cities due to pollution or fires. The aim of this is the study and quantification of the weather and smoke particles&rsquo; impact on a short-range optical communication thanks to a simulator. This article&rsquo;s novelty is the inclusion of the effects of smoke in a short-range outdoor VLC system channel model. This smoke model, which comes from the fire engineering field, states that smoke attenuation is independent of the wavelength, starting from high visibility to 5 m. The visibility represents the distance up to which an object can be distinguished against the background. The effects of fog and smoke are studied in the case of two outdoor VLC scenarios. Smoke and fog models have analogous equations to express the optical attenuation they induce, using the visibility concept. Taking into account the actual light-emitting diode (LED) lamp radiation pattern, the simulator computes the power at the receiver side and the channel attenuation coefficients for a given fog or/and smoke outdoor setting. The main result drawn in this paper is that the channel attenuation levels due to fog and smoke are both in the same order of magnitude, starting from the visibility of about 1 km. The attenuation induced by fog is higher under this threshold of 1 km.},
+	author = {Georlette, V{\'e}ronique and Bette, S{\'e}bastien and Brohez, Sylvain and P{\'e}rez-Jim{\'e}nez, Rafael and Point, Nicolas and Moeyaert, V{\'e}ronique},
+	date-added = {2022-07-11 08:26:31 +0800},
+	date-modified = {2022-07-11 08:26:40 +0800},
+	doi = {10.3390/opt1030020},
+	issn = {2673-3269},
+	journal = {Optics},
+	number = {3},
+	pages = {259--281},
+	title = {Outdoor Visible Light Communication Channel Modeling under Smoke Conditions and Analogy with Fog Conditions},
+	url = {https://www.mdpi.com/2673-3269/1/3/20},
+	volume = {1},
+	year = {2020},
+	bdsk-url-1 = {https://www.mdpi.com/2673-3269/1/3/20},
+	bdsk-url-2 = {https://doi.org/10.3390/opt1030020}}
+
+@article{pic:vlc,
+	author = {Taner {\c C}evik and Serdar Yilmaz},
+	date-added = {2022-07-11 05:13:53 +0800},
+	date-modified = {2022-07-11 05:14:19 +0800},
+	journal = {ArXiv},
+	title = {An overview of visible light communication systems},
+	volume = {abs/1512.03568},
+	year = {2015}}
+
+@article{pic:rolling_shutter_case,
+	author = {Ye-Sheng Kuo and Pat Pannuto and Ko-Jen Hsiao and Prabal Dutta},
+	date-added = {2022-07-11 03:16:36 +0800},
+	date-modified = {2022-07-11 03:16:45 +0800},
+	journal = {Proceedings of the 20th annual international conference on Mobile computing and networking},
+	title = {Luxapose: indoor positioning with mobile phones and visible light},
+	year = {2014}}
+
+@article{pic:rolling_shutter,
+	author = {Rahman, Md and Sejan, Mohammad Abrar and Kim, Jong-Jin and Chung, Wan-Young},
+	date-added = {2022-07-11 03:07:51 +0800},
+	date-modified = {2022-07-11 03:08:01 +0800},
+	doi = {10.3390/electronics9101635},
+	journal = {Electronics},
+	month = {10},
+	pages = {1-19},
+	title = {Reduced Tilting Effect of Smartphone CMOS Image Sensor in Visible Light Indoor Positioning},
+	volume = {9},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.3390/electronics9101635}}
+
+@inproceedings{case:rfid_1to1,
+	author = {Myungsik Kim and Nak Young Chong},
+	date-added = {2022-07-10 17:41:44 +0800},
+	date-modified = {2022-07-10 17:42:00 +0800},
+	title = {Enhancing RFID Location Sensing Using a Dual Directional Antenna},
+	year = {2005}}
+
+@inproceedings{landmarc,
+	author = {Ni, L.M. and Yunhao Liu and Yiu Cho Lau and Patil, A.P.},
+	booktitle = {Proceedings of the First IEEE International Conference on Pervasive Computing and Communications, 2003. (PerCom 2003).},
+	date-added = {2022-07-10 17:25:37 +0800},
+	date-modified = {2022-07-10 17:25:47 +0800},
+	doi = {10.1109/PERCOM.2003.1192765},
+	pages = {407-415},
+	title = {LANDMARC: indoor location sensing using active RFID},
+	year = {2003},
+	bdsk-url-1 = {https://doi.org/10.1109/PERCOM.2003.1192765}}
+
 @misc{pic:aruco,
-  author = {OpenCV},
-  title = {Detection of ArUco Markers},
-  note = {Retrieved Jul 2022},
-  howpublished = {Retrieved Jul 2022 from: \url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}}
-}
+	author = {OpenCV},
+	howpublished = {Retrieved Jul 2022 from: \url{http://web.archive.org/web/20080207010024/http://www.808multimedia.com/winnt/kernel.htm}},
+	title = {Detection of ArUco Markers}}
 
 @article{pic:image_processing,
 	abstract = {Recently, the demand for location-based services using mobile devices in indoor spaces without a global positioning system (GPS) has increased. However, to the best of our knowledge, solutions that are fully applicable to indoor positioning and navigation and ensure real-time mobility on mobile devices, such as global navigation satellite system (GNSS) solutions, cannot achieve remarkable researches in indoor circumstances. Indoor single-shot image positioning using smartphone cameras does not require a dedicated infrastructure and offers the advantages of low price and large potential markets owing to the popularization of smartphones. However, existing methods or systems based on smartphone cameras and image algorithms encounter various limitations when implemented in indoor environments. To address this, we designed an indoor visual positioning system for mobile devices that can locate users in indoor scenes. The proposed method uses a smartphone camera to detect objects through a single image in a web environment and calculates the location of the smartphone to find users in an indoor space. The system is inexpensive because it integrates deep learning and computer vision algorithms and does not require additional infrastructure. We present a novel method of detecting 3D model objects from single-shot RGB data, estimating the 6D pose and position of the camera and correcting errors based on voxels. To this end, the popular convolutional neural network (CNN) is improved by real-time pose estimation to handle the entire 6D pose estimate the location and direction of the camera. The estimated position of the camera is addressed to a voxel to determine a stable user position. Our VPS system provides the user with indoor information in 3D AR model. The voxel address optimization approach with camera 6D position estimation using RGB images in a mobile web environment outperforms real-time performance and accuracy compared to current state-of-the-art methods using RGB depth or point cloud.},
