--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-07-11 08:26:45 +0800 
+%% Created for Tiffany at 2022-07-11 13:07:59 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{case:aoa,
+	author = {Se-Hoon Yang and E.-M. Jeong and Sang‐Kook Han},
+	date-added = {2022-07-11 13:07:36 +0800},
+	date-modified = {2022-07-11 13:07:49 +0800},
+	journal = {Electronics Letters},
+	pages = {49-51},
+	title = {Indoor positioning based on received optical power difference by angle of arrival},
+	volume = {50},
+	year = {2014}}
 
 @article{pic:lambertian_3d,
 	abstract = {Visible Light Communication (VLC) has gained popularity in research and business in the last decade. This technology aims to combine lighting and communication into a single device. For now, this technology has been thoroughly studied for an indoor environment, but it is sufficiently mature nowadays to consider its outdoor-environment potentials. The key outdoor challenges are the weather variabilities and smoke particles in cities due to pollution or fires. The aim of this is the study and quantification of the weather and smoke particles&rsquo; impact on a short-range optical communication thanks to a simulator. This article&rsquo;s novelty is the inclusion of the effects of smoke in a short-range outdoor VLC system channel model. This smoke model, which comes from the fire engineering field, states that smoke attenuation is independent of the wavelength, starting from high visibility to 5 m. The visibility represents the distance up to which an object can be distinguished against the background. The effects of fog and smoke are studied in the case of two outdoor VLC scenarios. Smoke and fog models have analogous equations to express the optical attenuation they induce, using the visibility concept. Taking into account the actual light-emitting diode (LED) lamp radiation pattern, the simulator computes the power at the receiver side and the channel attenuation coefficients for a given fog or/and smoke outdoor setting. The main result drawn in this paper is that the channel attenuation levels due to fog and smoke are both in the same order of magnitude, starting from the visibility of about 1 km. The attenuation induced by fog is higher under this threshold of 1 km.},
