finish rewrite chp2

--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -57,8 +57,8 @@
 %normal cite == \input
 \input{chapter/01Introduction.tex}
 \input{chapter/02LiteratureReview.tex}
-% \input{chapter/03Method.tex}
-% \input{chapter/04Optimize.tex}
+\input{chapter/03Method.tex}
+\input{chapter/04Optimize.tex}
 % \input{chapter/05Case.tex}
 % \input{chapter/06Conclusion.tex}
 
