--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,128 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-07-11 13:07:59 +0800 
+%% Created for Tiffany at 2022-07-17 04:37:56 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{multipath,
+	author = {Barry, J.R. and Kahn, J.M. and Krause, W.J. and Lee, E.A. and Messerschmitt, D.G.},
+	date-added = {2022-07-17 04:37:47 +0800},
+	date-modified = {2022-07-17 04:37:52 +0800},
+	doi = {10.1109/49.219552},
+	journal = {IEEE Journal on Selected Areas in Communications},
+	number = {3},
+	pages = {367-379},
+	title = {Simulation of multipath impulse response for indoor wireless optical channels},
+	volume = {11},
+	year = {1993},
+	bdsk-url-1 = {https://doi.org/10.1109/49.219552}}
+
+@article{case:orient,
+	author = {Shengqiang Shen and Shiyin Li and Heidi Steendam},
+	date-added = {2022-07-17 00:13:49 +0800},
+	date-modified = {2022-07-17 00:13:56 +0800},
+	doi = {10.1109/jsac.2020.3000805},
+	journal = {{IEEE} Journal on Selected Areas in Communications},
+	month = {aug},
+	number = {8},
+	pages = {1866--1879},
+	publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+	title = {Simultaneous Position and Orientation Estimation for Visible Light Systems With Multiple {LEDs} and Multiple {PDs}},
+	url = {https://doi.org/10.1109%2Fjsac.2020.3000805},
+	volume = {38},
+	year = 2020,
+	bdsk-url-1 = {https://doi.org/10.1109%2Fjsac.2020.3000805},
+	bdsk-url-2 = {https://doi.org/10.1109/jsac.2020.3000805}}
+
+@article{vlc_adv,
+	author = {Pathak, Parth H. and Feng, Xiaotao and Hu, Pengfei and Mohapatra, Prasant},
+	date-added = {2022-07-16 04:07:52 +0800},
+	date-modified = {2022-07-16 04:15:55 +0800},
+	doi = {10.1109/COMST.2015.2476474},
+	journal = {IEEE Communications Surveys and Tutorials},
+	number = {4},
+	pages = {2047-2077},
+	title = {Visible Light Communication, Networking, and Sensing: A Survey, Potential and Challenges},
+	volume = {17},
+	year = {2015},
+	bdsk-url-1 = {https://doi.org/10.1109/COMST.2015.2476474}}
+
+@inproceedings{case:vlc_mobile,
+	author = {del Campo-Jimenez, Guillermo and Perandones, Jorge M. and Lopez-Hernandez, F. J.},
+	booktitle = {2013 International Conference on Localization and GNSS (ICL-GNSS)},
+	date-added = {2022-07-14 18:23:21 +0800},
+	date-modified = {2022-07-14 18:23:33 +0800},
+	doi = {10.1109/ICL-GNSS.2013.6577276},
+	pages = {1-4},
+	title = {A VLC-based beacon location system for mobile applications},
+	year = {2013},
+	bdsk-url-1 = {https://doi.org/10.1109/ICL-GNSS.2013.6577276}}
+
+@inproceedings{survey_indoor_comparative,
+	author = {Al-Ammar, Mai and Al-Hadhrami, Suheer and Al-Salman, Abdulmalik and Alarifi, Abdulrahman and Al-Khalifa, Hend and Alnafessah, Ahmad and Alsaleh, Mansour},
+	date-added = {2022-07-14 17:54:32 +0800},
+	date-modified = {2022-07-14 17:55:11 +0800},
+	doi = {10.1109/CW.2014.41},
+	month = {10},
+	pages = {245-252},
+	title = {Comparative Survey of Indoor Positioning Technologies, Techniques, and Algorithms},
+	year = {2014},
+	bdsk-url-1 = {https://doi.org/10.1109/CW.2014.41}}
+
+@article{survey:radio,
+	abstract = {The indoor positioning system (IPS) is becoming increasing important in accurately determining the locations of objects by the utilization of micro-electro-mechanical-systems (MEMS) involving smartphone sensors, embedded sources, mapping localizations, and wireless communication networks. Generally, a global positioning system (GPS) may not be effective in servicing the reality of a complex indoor environment, due to the limitations of the line-of-sight (LoS) path from the satellite. Different techniques have been used in indoor localization services (ILSs) in order to solve particular issues, such as multipath environments, the energy inefficiency of long-term battery usage, intensive labour and the resources of offline information collection and the estimation of accumulated positioning errors. Moreover, advanced algorithms, machine learning, and valuable algorithms have given rise to effective ways in determining indoor locations. This paper presents a comprehensive review on the positioning algorithms for indoors, based on advances reported in radio wave, infrared, visible light, sound, and magnetic field technologies. The traditional ranging parameters in addition to advanced parameters such as channel state information (CSI), reference signal received power (RSRP), and reference signal received quality (RSRQ) are also presented for distance estimation in localization systems. In summary, the recent advanced algorithms can offer precise positioning behaviour for an unknown environment in indoor locations.},
+	article-number = {279},
+	author = {Kim Geok, Tan and Zar Aung, Khaing and Sandar Aung, Moe and Thu Soe, Min and Abdaziz, Azlan and Pao Liew, Chia and Hossain, Ferdous and Tso, Chih P. and Yong, Wong Hin},
+	date-added = {2022-07-14 17:28:00 +0800},
+	date-modified = {2022-07-14 17:28:10 +0800},
+	doi = {10.3390/app11010279},
+	issn = {2076-3417},
+	journal = {Applied Sciences},
+	number = {1},
+	title = {Review of Indoor Positioning: Radio Wave Technology},
+	url = {https://www.mdpi.com/2076-3417/11/1/279},
+	volume = {11},
+	year = {2021},
+	bdsk-url-1 = {https://www.mdpi.com/2076-3417/11/1/279},
+	bdsk-url-2 = {https://doi.org/10.3390/app11010279}}
+
+@article{survey:indoor_wayfinding,
+	author = {Kunhoth, Jayakanth and Karkar, AbdelGhani and Al-ma'adeed, Somaya and Al-Ali, Abdulla},
+	date-added = {2022-07-14 16:57:41 +0800},
+	date-modified = {2022-07-14 16:57:53 +0800},
+	doi = {10.1186/s13673-020-00222-0},
+	journal = {Human-centric Computing and Information Sciences},
+	month = {12},
+	title = {Indoor positioning and wayfinding systems: a survey},
+	volume = {10},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.1186/s13673-020-00222-0}}
+
+@inproceedings{GPS_important,
+	author = {Sheng-Cheng Yeh and Wu-Hsiao Hsu and Ming-Yang Su and Ching-Hui Chen and Ko-Hung Liu},
+	booktitle = {2009 International Conference on Networking, Sensing and Control},
+	date-added = {2022-07-14 16:24:06 +0800},
+	date-modified = {2022-07-14 16:24:14 +0800},
+	doi = {10.1109/ICNSC.2009.4919345},
+	pages = {597-601},
+	title = {A study on outdoor positioning technology using GPS and WiFi networks},
+	year = {2009},
+	bdsk-url-1 = {https://doi.org/10.1109/ICNSC.2009.4919345}}
+
+@inproceedings{outdoor_scenario,
+	author = {De Angelis, Guido and De Angelis, Alessio and Pasku, Valter and Moschitta, Antonio and Carbone, Paolo},
+	booktitle = {2015 IEEE International Symposium on Systems Engineering (ISSE)},
+	date-added = {2022-07-14 16:12:41 +0800},
+	date-modified = {2022-07-14 16:12:56 +0800},
+	doi = {10.1109/SysEng.2015.7302503},
+	pages = {1-6},
+	title = {A hybrid outdoor/indoor Positioning System for IoT applications},
+	year = {2015},
+	bdsk-url-1 = {https://doi.org/10.1109/SysEng.2015.7302503}}
 
 @article{case:aoa,
 	author = {Se-Hoon Yang and E.-M. Jeong and Sang‐Kook Han},
