--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -58,9 +58,9 @@
 \input{chapter/01Introduction.tex}
 \input{chapter/02LiteratureReview.tex}
 \input{chapter/03Method.tex}
-\input{chapter/04Optimize.tex}
-% \input{chapter/05Case.tex}
-% \input{chapter/06Conclusion.tex}
+\input{chapter/04Analysis.tex}
+\input{chapter/05Optimize.tex}
+\input{chapter/06Conclusion.tex}
 
 
 %chapter cite  == \include
