--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-07-17 04:37:56 +0800 
+%% Created for Tiffany at 2022-07-23 04:32:01 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{datasheet:led_vsma,
+	date-added = {2022-07-23 04:30:11 +0800},
+	date-modified = {2022-07-23 04:31:41 +0800},
+	month = {03},
+	organization = {Vishay},
+	title = {High Power Infrared Emitting Diode, 850 nm, Surface Emitter Technology},
+	year = {2022}}
 
 @article{multipath,
 	author = {Barry, J.R. and Kahn, J.M. and Krause, W.J. and Lee, E.A. and Messerschmitt, D.G.},
