--- a/ThesisCh/ntuvars.tex
+++ b/ThesisCh/ntuvars.tex
@@ -31,8 +31,10 @@
 % }}}
 
 % {{{
-\titleCH{中文標題}
-\titleEN{English title}
+\titleCH{一個不限制平面平行的LED-PD室內三維定位系統最佳化考量硬體指向與朗博次方參數}
+%針對考慮發射與接收平面不平行情境的LED-PD室內三維定位演算法進行硬體指向與朗博次方的最佳化
+\titleEN{The optimal design of a three-dimensional LED-PD indoor positioning system considering variable hardware orientation and lambertian order without parallel planes assumptions.}
+% The optimal design of a indoor 3D relative position system using LED and PD considering non-parallel alignment with variable orientation and Lambertian order.}
 \authorCH{李亭宜}
 \studentID{R09522620}
 \authorEN{Ting-I Lee}
@@ -40,7 +42,7 @@
 \advisorEN{Kuei-Yuan Chan, Ph.D.}
 \yearCH{111}
 \yearEN{2022}
-\monthCH{7}
-\monthEN{July}
-\dateCH{15}
+\monthCH{8}
+\monthEN{August}
+\dateCH{??}
 % }}}
