--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-07-23 04:32:01 +0800 
+%% Created for Tiffany at 2022-07-25 15:37:20 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{datasheet:BPW,
+	date-added = {2022-07-25 15:36:11 +0800},
+	date-modified = {2022-07-25 15:37:19 +0800},
+	month = {08},
+	organization = {Vishay Semiconductors},
+	title = {Silicon PN Photodiode BPW20RF},
+	year = {2005}}
 
 @manual{datasheet:led_vsma,
 	date-added = {2022-07-23 04:30:11 +0800},
