--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -7,6 +7,8 @@
 
 \usepackage{longtable}
 \usepackage{caption}
+\usepackage{siunitx,array,multirow}
+
 \begin{document}
 
 \setcounter{tocdepth}{3}
@@ -73,22 +75,22 @@
 
 
 %----------- Input your appendix here  -----------
-\appendix
-\titlecontents{chapter}[0em]{\fontsize{12}{18}\selectfont}
-  {\hspace{3.5em}\contentslabel[附錄\,\thecontentslabel]{3.5em}}
-  {}{\hspace{0.5em}\titlerule*{.}\contentspage}
+% \appendix
+% \titlecontents{chapter}[0em]{\fontsize{12}{18}\selectfont}
+%   {\hspace{3.5em}\contentslabel[附錄\,\thecontentslabel]{3.5em}}
+%   {}{\hspace{0.5em}\titlerule*{.}\contentspage}
 
-\titleformat{\chapter}[display]
-	{\bf\Large}
-	{\filleft 附錄\,\thechapter}
-	{1ex}
-	{\huge\titlerule
-	 \vspace{2ex}%
-	 \filright}
-	[\vspace{2ex}%
-	 \titlerule]
+% \titleformat{\chapter}[display]
+% 	{\bf\Large}
+% 	{\filleft 附錄\,\thechapter}
+% 	{1ex}
+% 	{\huge\titlerule
+% 	 \vspace{2ex}%
+% 	 \filright}
+% 	[\vspace{2ex}%
+% 	 \titlerule]
 
-% \input{AppendixA} 
+
 
 
 
