--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-07-25 15:37:20 +0800 
+%% Created for Tiffany at 2022-08-04 12:31:53 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{datasheet:hm_pd,
+	date-added = {2022-08-04 12:30:51 +0800},
+	date-modified = {2022-08-04 12:31:52 +0800},
+	month = {Jan},
+	organization = {Hamamatsu},
+	title = {Si Photodiodes S12915 series},
+	year = {2019}}
+
+@manual{datasheet:hmL12170,
+	date-added = {2022-08-04 12:29:25 +0800},
+	date-modified = {2022-08-04 12:30:34 +0800},
+	month = {Aug},
+	organization = {Hamamatsu},
+	title = {Infrared LED L12170},
+	year = {2014}}
 
 @manual{datasheet:BPW,
 	date-added = {2022-07-25 15:36:11 +0800},
