--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,38 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-08-04 12:31:53 +0800 
+%% Created for Tiffany at 2022-08-05 05:37:30 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{omg_new,
+	author = {Saab, Samer Said and Saab, Khaled Kamal},
+	date-added = {2022-08-05 05:37:19 +0800},
+	date-modified = {2022-08-05 05:37:25 +0800},
+	doi = {10.1109/JPHOT.2016.2611441},
+	journal = {IEEE Photonics Journal},
+	number = {5},
+	pages = {1-14},
+	title = {A Positioning System for Photodiode Device Using Collocated LEDs},
+	volume = {8},
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.1109/JPHOT.2016.2611441}}
+
+@article{omg_old,
+	author = {Zhang, Weizhi and Chowdhury, M. and Kavehrad, Mohsen},
+	date-added = {2022-08-05 05:36:07 +0800},
+	date-modified = {2022-08-05 05:36:16 +0800},
+	doi = {10.1117/1.OE.53.4.045105},
+	journal = {Optical Engineering},
+	month = {04},
+	pages = {045105},
+	title = {Asynchronous indoor positioning system based on visible light communications},
+	volume = {53},
+	year = {2014},
+	bdsk-url-1 = {https://doi.org/10.1117/1.OE.53.4.045105}}
 
 @manual{datasheet:hm_pd,
 	date-added = {2022-08-04 12:30:51 +0800},
