symbol list alphabet order

--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -1,4 +1,3 @@
-% !TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 \documentclass[a4paper, 12pt, oneside]{book}
 
@@ -47,9 +46,9 @@
 \onehalfspacing
 \tableofcontents
 \listoffigures
-% \listoftables
+\listoftables
 \input{Chapter/SymbolList.tex}
-
+\input{Chapter/SymbolList_alphabet.tex}
 
 \mainmatter
 
