--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,19 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-08-05 05:37:30 +0800 
+%% Created for Tiffany at 2022-08-11 08:52:46 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{datasheet:led_luxeon,
+	date-added = {2022-08-11 08:51:44 +0800},
+	date-modified = {2022-08-11 08:52:43 +0800},
+	organization = {Lumineds},
+	title = {DS190 Luxeon IR compact Line Product Datasheet},
+	year = {2018}}
 
 @article{omg_new,
 	author = {Saab, Samer Said and Saab, Khaled Kamal},
