--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-08-11 08:52:46 +0800 
+%% Created for Tiffany at 2022-08-14 17:35:01 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{multipath_new,
+	author = {Gu, Wenjun and Aminikashani, Mohammadreza and Deng, Peng and Kavehrad, Mohsen},
+	date-added = {2022-08-14 17:34:33 +0800},
+	date-modified = {2022-08-14 17:34:58 +0800},
+	doi = {10.1109/JLT.2016.2541659},
+	journal = {Journal of Lightwave Technology},
+	month = {05},
+	pages = {2578-2587},
+	title = {Impact of Multipath Reflections on the Performance of Indoor Visible Light Positioning Systems},
+	volume = {34},
+	year = {2016},
+	bdsk-url-1 = {https://doi.org/10.1109/JLT.2016.2541659}}
 
 @manual{datasheet:led_luxeon,
 	date-added = {2022-08-11 08:51:44 +0800},
