--- a/ThesisCh/FrontFile/abstractCH.tex
+++ b/ThesisCh/FrontFile/abstractCH.tex
@@ -1,7 +1,10 @@
 \begin{abstractCH}
 
-  我是緒論
+  隨著科技與物連網的發展，各領域對於量測資訊的需求大量增加，而其中相對位置的資訊實為重要。然而，現今室內定位仍多以多個參考點進行定位，缺乏僅以「兩可攜式單位」達到兩單位之間三維定位的方法。因此，我們由不同的室內定位方法開始介紹，根據以上需求將研究重點聚焦在光波段中發光二極體(Light Emitting Diode)與光電二極體(Photodiode)的定位方法，此方法具有靈活達到兩單位之間三維定位的潛力，但現今文獻中對使用情境與系統設計的限制仍許多，大多需限制接收與發射平面平行且僅能達到二維定位。因此，本研究針對LED與PD的定位方法，建立一個可以不限制接收與發射平面平行的三維定位演算法，也不限制硬體的朗博次方(Lambertian Order)、硬體數量以及各硬體的擺放指向，使系統具有根據不同情境進行改變與設計的能力，改善此領域中對系統設計以及使用情境較多的限制。建立演算法後，本研究由該演算法建立一模擬環境與系統成效的量化方式，於模擬環境中，我們可以評估各系統設計下的定位效能，並透過改變不同的系統設計、使用情境與感興趣範圍(Region of Interest)、以及誤差參數，來觀察以及探討各參數對系統成效的影響。除此之外，本研究針對不同的使用情境，將系統設計作為變數進行最佳化，可將該最佳系統設計作為實際硬體系統搭建的參考。總結來說，本研究提供一僅利用兩單位進行三維定位的定位演算法，並建立一模擬軟體，讓使用者得以在不浪費硬體搭建的成本下對系統設計進行分析與評估，也可以針對特定的使用情境進行系統設計的最佳化，在硬體系統搭建前達到有效的評估。
+
+  % 此定位演算法對
+
   \vspace{1cm}
-  \noindent \textbf{關鍵字：}
+  \noindent \textbf{關鍵字：室內定位、光定位、發光二極體、LED、光電二極體、定位演算法、朗博次方}
 
 \end{abstractCH}
