--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -39,9 +39,9 @@
 %\includepdf[pages={1}]{Verification_Letter.pdf}
 \onehalfspacing
 % \input{FrontFile/acknowledgementsCH} %致謝
-% \input{FrontFile/abstractCH}
-% \doublespacing
-% \input{FrontFile/abstractEN}
+\input{FrontFile/abstractCH}
+\doublespacing
+\input{FrontFile/abstractEN}
 
 \doublespacing
 \onehalfspacing
