--- a/ThesisCh/thesisbib.bib
+++ b/ThesisCh/thesisbib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tiffany at 2022-08-14 17:35:01 +0800 
+%% Created for Tiffany at 2022-08-14 20:00:50 +0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{hamamatsu,
+	date-added = {2022-08-14 19:59:31 +0800},
+	date-modified = {2022-08-14 20:00:43 +0800},
+	edition = {No.KSPD9001E02},
+	month = {May},
+	organization = {Hamamatsu},
+	title = {Technical note of Si photodiodes},
+	year = {2022}}
 
 @article{multipath_new,
 	author = {Gu, Wenjun and Aminikashani, Mohammadreza and Deng, Peng and Kavehrad, Mohsen},
