--- a/ThesisCh/thesis.tex
+++ b/ThesisCh/thesis.tex
@@ -7,7 +7,7 @@
 \usepackage{longtable}
 \usepackage{caption}
 \usepackage{siunitx,array,multirow}
-\usepackage{arydshln}
+\usepackage{arydshln,diagbox}
 
 \begin{document}
 
